--- a/manifest.json
+++ b/manifest.json
@@ -1,14 +1,26 @@
 {
   "manifest_version": 3,
-  "name": "Key Logger Console",
+  "name": "Command Assistant",
   "version": "1.0",
-  "description": "Escuta e printa todas as teclas pressionadas no console.",
-  "permissions": ["scripting"],
+  "description": "Assistente de comandos com interface pop-up",
+  "permissions": ["scripting", "activeTab", "clipboardWrite"],
+  "action": {
+    "default_popup": "popup/popup.html"
+  },
+  "icons": {
+    "16": "assets/icon16.png",
+    "48": "assets/icon48.png",
+    "128": "assets/icon128.png"
+  },
+  "background": {
+    "service_worker": "scripts/background.js",
+    "type": "module"
+  },
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["content.js"],
-      "run_at": "document_idle"
+      "js": ["scripts/content.js"],
+      "run_at": "document_end"
     }
   ]
 }
